--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,10 @@ h3 {
   background-color: #FFDE7A;
   padding: 2%;
 }
+.header {
+    padding: 60px;
+    text-align: center
+    background: FFA500
+    color: white;
+    font size: 30px;
+}
