--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h3 {
 .header {
     padding: 60px;
     text-align: center
-    background: FFA500
+    background: FFD700
     color: white;
     font size: 30px;
 }
