--- a/neuroconsultform.css
+++ b/neuroconsultform.css
@@ -11,178 +11,208 @@ patientinformation {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 casenumber {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 patientname {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 species {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 breed {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 sex {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 dob {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 weight {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 Request {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 question1 {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 question2 {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 question3 {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 question4 {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 question5 {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 question6 {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 question7 {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 report {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 findings {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 mentation {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 cranialnerves {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 gait {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 reflexes {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 proprioception {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 palpation {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 localization {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 body {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 diagnosis {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 primary {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 recommendation {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
 treatment {
     color: black;
     display: block;
     font-size: 100%;
+    text-align: left;
 }
 
