--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,39 @@
 body {
-  font-family: "Geneva", sans-serif;
+    margin: 0;
+    padding:0;
+    font-family: "Geneva", sans-serif;
+}
+
+.nav {
+    background-color: #595959;
+    color: #ffffff;
+    list-style: none;
+    text-align: center;
+    padding: 20px 0 20px 0 
+}
+
+.nav > li {
+    display: inline-block;
+    padding-right: 50px;
+}
+
+.nav > li > a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.nav > li > a:hover {
+    color: #c1c1c1;
 }
 
 h3 {
-  color: #7A0019;
+  color: #7a0019;
 }
 h2 {
-  color: #FFDE7A;
+  color: #ffcc33;
 }
 
 #contact {
-  background-color: #FFDE7A;
-  padding: 2%;
+  background-color: #ffcc33;
+  padding: 0;
 }
