--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin-left: 25px;
     padding:0;
     font-family: "Geneva", sans-serif;
 }
@@ -36,4 +36,4 @@ h2 {
 #contact {
   background-color: #ffcc33;
   padding: 0;
-}
+} 
