--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,13 @@ h2 {
   background-color: #ffcc33;
   padding: 0;
 } 
+
+.banner {
+    width: 100%;
+    display: block;
+}
+
+.banner > banner-image {
+    width: 100%;
+    display: block;
+}
